fixed alignment and email

--- a/main.css
+++ b/main.css
@@ -33,6 +33,9 @@ section{
     padding-left: 50px;
     
   }
+  #header-right{
+    padding-bottom: -20px;
+  }
 
 
 
